# CONTEXT_AWARNESS_LCEL_BOT

./: README.md
backend/: main.py  pyproject.toml  requirements.txt
backend/bot/: main_bot.py
backend/config/: env_config.py  limiter_config.py
backend/db/: db_config.py  db_helper.py  db_models.py
backend/files/: chart_history.json
backend/models/: InputModels.py
backend/tools/: location_tools.py
backend/utils/: middleware_session.py
frontend/conversation_aware_chatbot/: .env  index.html  package-lock.json  package.json
frontend/conversation_aware_chatbot/src/: App.jsx  index.css  main.jsx
frontend/conversation_aware_chatbot/src/components/: ChatBot.jsx  ChatHistory.jsx  ChatInput.jsx  DashBoard.jsx  Loader.jsx  LoaderSpecfic.jsx  Modal.jsx  NavBar.jsx  PrettyJson.jsx  Responsing.jsx  SideBarItems.jsx
frontend/conversation_aware_chatbot/src/data/: StringData.js  sampleData.js
frontend/conversation_aware_chatbot/src/store/: booleanReducer.js  loaderReducer.js  modalReducer.js  rootreducer.js  sessionReducer.js  splashReducer.js  store.js
frontend/conversation_aware_chatbot/src/utils/: URLConstants.js  networkUtils.js
