[project]
name = "context-awarness-lcel-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "langchain>=1.2.15",
    "langchain-core>=1.3.2",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.1",
    "pipreqs>=0.5.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]
